debugging BazaarRequest